[gd_scene load_steps=14 format=2]

[ext_resource path="res://background.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ChangeCharacter.gd" type="Script" id=2]
[ext_resource path="res://Fonts/FSEX300.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/Mulher-2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Homem3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Mulher-1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Mulher-3.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Homem1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Homem2.png" type="Texture" id=9]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=10]
[ext_resource path="res://Scripts/SaveLoad.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 6.10352e-05
rect_pivot_offset = Vector2( -115.567, 42.4122 )
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background Sprite" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 320.0
margin_top = 144.0
margin_right = 715.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 1 )
text = "Escolha seu personagem:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 1.0
margin_right = 1024.0
margin_bottom = 601.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 223.0
margin_right = 1024.0
margin_bottom = 287.0
custom_constants/separation = 35
alignment = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Level01" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 349.0
margin_right = 374.0
margin_bottom = 64.0
rect_min_size = Vector2( 25, 50 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 8 )

[node name="Level02" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 409.0
margin_right = 434.0
margin_bottom = 64.0
rect_min_size = Vector2( 25, 50 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 9 )

[node name="Level03" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 469.0
margin_right = 494.0
margin_bottom = 64.0
rect_min_size = Vector2( 25, 50 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 5 )

[node name="Level04" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 529.0
margin_right = 554.0
margin_bottom = 64.0
rect_min_size = Vector2( 25, 50 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 6 )

[node name="Level05" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 589.0
margin_right = 614.0
margin_bottom = 64.0
rect_min_size = Vector2( 25, 50 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 4 )

[node name="Level06" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 649.0
margin_right = 674.0
margin_bottom = 64.0
rect_min_size = Vector2( 25, 50 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 7 )

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 327.0
margin_right = 1024.0
margin_bottom = 377.0
alignment = 1
script = ExtResource( 10 )

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 474.0
margin_right = 549.0
margin_bottom = 50.0
rect_min_size = Vector2( 75, 50 )
custom_fonts/font = SubResource( 2 )
text = "Voltar"
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Level01" to="MarginContainer/VBoxContainer/HBoxContainer" method="_on_Level01_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Level02" to="MarginContainer/VBoxContainer/HBoxContainer" method="_on_Level02_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Level03" to="MarginContainer/VBoxContainer/HBoxContainer" method="_on_Level03_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Level04" to="MarginContainer/VBoxContainer/HBoxContainer" method="_on_Level04_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Level05" to="MarginContainer/VBoxContainer/HBoxContainer" method="_on_Level05_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Level06" to="MarginContainer/VBoxContainer/HBoxContainer" method="_on_Level06_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Button" to="MarginContainer/VBoxContainer/HBoxContainer2" method="_on_Button_pressed"]
